  prevents the parent component to shine through, which would e. g. show blue
  edges with the BufferTabs plugin installed and active.
  (Björn "Vampire" Kautler) [Merged into 5.2.x]

- Fix a bug preventing from removing an unloaded plugin
  (#3877 - Matthieu Casanova) [Merged into 5.2.x]

- The native splashscreen is removed as it was not possible to disable it
  (#3876 - Matthieu Casanova) [Merged into 5.2.x]

- Bugfix in EditPane.java related to file status checks.
  (Patch #534 - Matt Galligan)

- Fix for bug #3389 in BufferSwitcher.java where look and feel was locked to
  Metal. (Dale Anson) [Merged into 5.2.x]

}}}

{{{ UI Improvements

- Floating dockables as JDialog (Patch #537 - Makarius)

- CompletionPopup should accept TAB for completion selection (Patch # 525 - Jakub Holý)

}}}
{{{ Miscellaneous

- Properties are sorted when saved (Patch #536 - Makarius)

- Configure the JUnit task to fork off the Ant process, with manually adding the
  needed Ant libraries. This ensures that there are no unwanted classpath
  entries during test execution (Bug #1732 - Björn "Vampire" Kautler)

- Upgrade Launch4J to the latest version 3.5.0. This makes it possible to UTF-8
  encode the config file and build the EXE launcher on Mac OS again, removing
  the need for Rosetta being installed, which is not supported anymore anyway
  since Mac OS 10.7. (Björn "Vampire" Kautler)

}}}
{{{ API Changes

- View now sends ViewUpdate message on EditBus when full screen mode is toggled.
  This is useful to plugins that may need to adjust their appearance when the
  screen mode is toggled. (Dale Anson)

}}}
{{{ Editing

  - Updates to cfscript mode (Patch #531 - Darien Brown)

  - New mode for ANS Forth 1994 (Patch #530 - Dibsco)

  - New mode for mustache templates (Patch #532 - Kevin Hunter Kesling)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: